Add jumbotron to dashobard#index

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -1,2 +1,4 @@
-%h1 Dashboard#index
-%p Find me in app/views/dashboard/index.html.haml
+.jumbotron.center-align
+  %h1= t(:jumbotron_header)
+  %p= t(:jumbotron_description)
+  .btn.btn-success.btn-lg= t(:get_started_now)
