--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,5 +10,6 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    = render 'layouts/navbar'
     .container
       = yield
